# Sitema-pedidos-industria-moveleira

./: README.md  pyproject.toml
config/: settings.py  urls.py
industria/: admin.py
industria/migrations/: 0001_initial.py  0002_pedido_descricao.py
industria/models/: __init__.py  cliente.py  funcionario.py  materia.py  pedido.py  produto.py
industria/serializers/: __init__.py  cliente.py  funcionario.py  materia.py  pedido.py  produto.py
industria/views/: __init__.py  cliente.py  funcionario.py  materia.py  pedido.py  produto.py
